antlr4-runtime/generated/PhoneNumberParser.cpp

// Generated from /home/jhyry/Code/GamblingRecoveryHelp/antlr4-runtime/../GRHCrawler/lang/config/PhoneNumber.g4 by ANTLR 4.13.1


#include "PhoneNumberListener.h"
#include "PhoneNumberVisitor.h"

#include "PhoneNumberParser.h"


using namespace antlrcpp;
using namespace antlrcpp;

using namespace antlr4;

namespace {

struct PhoneNumberParserStaticData final {
  PhoneNumberParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PhoneNumberParserStaticData(const PhoneNumberParserStaticData&) = delete;
  PhoneNumberParserStaticData(PhoneNumberParserStaticData&&) = delete;
  PhoneNumberParserStaticData& operator=(const PhoneNumberParserStaticData&) = delete;
  PhoneNumberParserStaticData& operator=(PhoneNumberParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag phonenumberParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
PhoneNumberParserStaticData *phonenumberParserStaticData = nullptr;

void phonenumberParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (phonenumberParserStaticData != nullptr) {
    return;
  }
#else
  assert(phonenumberParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<PhoneNumberParserStaticData>(
    std::vector<std::string>{
      "phone", "countryCode", "areaCode", "phoneNumber", "localPhone", "localArea", 
      "localizer", "dtmf", "dtmfWithLocal", "localAreaWithDtmf", "dtmfAll", 
      "dtmfLocalizer", "phoneSep"
    },
    std::vector<std::string>{
      "", "'('", "')'", "", "", "", "", "", "", "", "", "", "'.'", "'='", 
      "':'", "'#'", "' '", "'$'", "'/'", "'_'", "'+'", "'-'", "'%'", "'['", 
      "']'", "'&'", "'@'", "'\\u003F'"
    },
    std::vector<std::string>{
      "", "LPAREN", "RPAREN", "WS", "BASIC_STRING", "STRING", "DIGITS", 
      "ALPHANUM", "ALPHA", "HEX", "SINGLE_DIGIT_INT", "ZERO", "PERIOD", 
      "EQ", "COL", "HASH", "SPACE", "DOLLAR", "FS", "US", "PLUS", "HYPH", 
      "PERC", "LBRACKET", "RBRACKET", "AMP", "AT", "Q"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  phonenumberParserStaticData = staticData.release();
}

}

PhoneNumberParser::PhoneNumberParser(TokenStream *input) : PhoneNumberParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

PhoneNumberParser::PhoneNumberParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  PhoneNumberParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *phonenumberParserStaticData->atn, phonenumberParserStaticData->decisionToDFA, phonenumberParserStaticData->sharedContextCache, options);
}

PhoneNumberParser::~PhoneNumberParser() {
  delete _interpreter;
}

const atn::ATN& PhoneNumberParser::getATN() const {
  return *phonenumberParserStaticData->atn;
}

std::string PhoneNumberParser::getGrammarFileName() const {
  return "PhoneNumber.g4";
}

const std::vector<std::string>& PhoneNumberParser::getRuleNames() const {
  return phonenumberParserStaticData->ruleNames;
}

const dfa::Vocabulary& PhoneNumberParser::getVocabulary() const {
  return phonenumberParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView PhoneNumberParser::getSerializedATN() const {
  return phonenumberParserStaticData->serializedATN;
}


//----------------- PhoneContext ------------------------------------------------------------------

PhoneNumberParser::PhoneContext::PhoneContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PhoneNumberParser::CountryCodeContext* PhoneNumberParser::PhoneContext::countryCode() {
  return getRuleContext<PhoneNumberParser::CountryCodeContext>(0);
}

std::vector<PhoneNumberParser::PhoneSepContext *> PhoneNumberParser::PhoneContext::phoneSep() {
  return getRuleContexts<PhoneNumberParser::PhoneSepContext>();
}

PhoneNumberParser::PhoneSepContext* PhoneNumberParser::PhoneContext::phoneSep(size_t i) {
  return getRuleContext<PhoneNumberParser::PhoneSepContext>(i);
}

PhoneNumberParser::AreaCodeContext* PhoneNumberParser::PhoneContext::areaCode() {
  return getRuleContext<PhoneNumberParser::AreaCodeContext>(0);
}

PhoneNumberParser::PhoneNumberContext* PhoneNumberParser::PhoneContext::phoneNumber() {
  return getRuleContext<PhoneNumberParser::PhoneNumberContext>(0);
}

tree::TerminalNode* PhoneNumberParser::PhoneContext::EOF() {
  return getToken(PhoneNumberParser::EOF, 0);
}


size_t PhoneNumberParser::PhoneContext::getRuleIndex() const {
  return PhoneNumberParser::RulePhone;
}

void PhoneNumberParser::PhoneContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPhone(this);
}

void PhoneNumberParser::PhoneContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPhone(this);
}


std::any PhoneNumberParser::PhoneContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PhoneNumberVisitor*>(visitor))
    return parserVisitor->visitPhone(this);
  else
    return visitor->visitChildren(this);
}

PhoneNumberParser::PhoneContext* PhoneNumberParser::phone() {
  PhoneContext *_localctx = _tracker.createInstance<PhoneContext>(_ctx, getState());
  enterRule(_localctx, 0, PhoneNumberParser::RulePhone);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(26);
    countryCode();
    setState(27);
    phoneSep();
    setState(28);
    areaCode();
    setState(29);
    phoneSep();
    setState(30);
    phoneNumber();
    setState(32);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      setState(31);
      match(PhoneNumberParser::EOF);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CountryCodeContext ------------------------------------------------------------------

PhoneNumberParser::CountryCodeContext::CountryCodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PhoneNumberParser::CountryCodeContext::DIGITS() {
  return getToken(PhoneNumberParser::DIGITS, 0);
}

tree::TerminalNode* PhoneNumberParser::CountryCodeContext::PLUS() {
  return getToken(PhoneNumberParser::PLUS, 0);
}


size_t PhoneNumberParser::CountryCodeContext::getRuleIndex() const {
  return PhoneNumberParser::RuleCountryCode;
}

void PhoneNumberParser::CountryCodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCountryCode(this);
}

void PhoneNumberParser::CountryCodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCountryCode(this);
}


std::any PhoneNumberParser::CountryCodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PhoneNumberVisitor*>(visitor))
    return parserVisitor->visitCountryCode(this);
  else
    return visitor->visitChildren(this);
}

PhoneNumberParser::CountryCodeContext* PhoneNumberParser::countryCode() {
  CountryCodeContext *_localctx = _tracker.createInstance<CountryCodeContext>(_ctx, getState());
  enterRule(_localctx, 2, PhoneNumberParser::RuleCountryCode);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PhoneNumberParser::PLUS) {
      setState(34);
      match(PhoneNumberParser::PLUS);
    }
    setState(37);
    match(PhoneNumberParser::DIGITS);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AreaCodeContext ------------------------------------------------------------------

PhoneNumberParser::AreaCodeContext::AreaCodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PhoneNumberParser::AreaCodeContext::DIGITS() {
  return getToken(PhoneNumberParser::DIGITS, 0);
}

tree::TerminalNode* PhoneNumberParser::AreaCodeContext::LPAREN() {
  return getToken(PhoneNumberParser::LPAREN, 0);
}

tree::TerminalNode* PhoneNumberParser::AreaCodeContext::RPAREN() {
  return getToken(PhoneNumberParser::RPAREN, 0);
}


size_t PhoneNumberParser::AreaCodeContext::getRuleIndex() const {
  return PhoneNumberParser::RuleAreaCode;
}

void PhoneNumberParser::AreaCodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAreaCode(this);
}

void PhoneNumberParser::AreaCodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAreaCode(this);
}


std::any PhoneNumberParser::AreaCodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PhoneNumberVisitor*>(visitor))
    return parserVisitor->visitAreaCode(this);
  else
    return visitor->visitChildren(this);
}

PhoneNumberParser::AreaCodeContext* PhoneNumberParser::areaCode() {
  AreaCodeContext *_localctx = _tracker.createInstance<AreaCodeContext>(_ctx, getState());
  enterRule(_localctx, 4, PhoneNumberParser::RuleAreaCode);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PhoneNumberParser::LPAREN) {
      setState(39);
      match(PhoneNumberParser::LPAREN);
    }
    setState(42);
    match(PhoneNumberParser::DIGITS);
    setState(44);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PhoneNumberParser::RPAREN) {
      setState(43);
      match(PhoneNumberParser::RPAREN);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PhoneNumberContext ------------------------------------------------------------------

PhoneNumberParser::PhoneNumberContext::PhoneNumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PhoneNumberParser::LocalPhoneContext* PhoneNumberParser::PhoneNumberContext::localPhone() {
  return getRuleContext<PhoneNumberParser::LocalPhoneContext>(0);
}

PhoneNumberParser::DtmfContext* PhoneNumberParser::PhoneNumberContext::dtmf() {
  return getRuleContext<PhoneNumberParser::DtmfContext>(0);
}


size_t PhoneNumberParser::PhoneNumberContext::getRuleIndex() const {
  return PhoneNumberParser::RulePhoneNumber;
}

void PhoneNumberParser::PhoneNumberContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPhoneNumber(this);
}

void PhoneNumberParser::PhoneNumberContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPhoneNumber(this);
}


std::any PhoneNumberParser::PhoneNumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PhoneNumberVisitor*>(visitor))
    return parserVisitor->visitPhoneNumber(this);
  else
    return visitor->visitChildren(this);
}

PhoneNumberParser::PhoneNumberContext* PhoneNumberParser::phoneNumber() {
  PhoneNumberContext *_localctx = _tracker.createInstance<PhoneNumberContext>(_ctx, getState());
  enterRule(_localctx, 6, PhoneNumberParser::RulePhoneNumber);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(48);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(46);
      localPhone();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(47);
      dtmf();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LocalPhoneContext ------------------------------------------------------------------

PhoneNumberParser::LocalPhoneContext::LocalPhoneContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PhoneNumberParser::LocalAreaContext* PhoneNumberParser::LocalPhoneContext::localArea() {
  return getRuleContext<PhoneNumberParser::LocalAreaContext>(0);
}

PhoneNumberParser::PhoneSepContext* PhoneNumberParser::LocalPhoneContext::phoneSep() {
  return getRuleContext<PhoneNumberParser::PhoneSepContext>(0);
}

PhoneNumberParser::LocalizerContext* PhoneNumberParser::LocalPhoneContext::localizer() {
  return getRuleContext<PhoneNumberParser::LocalizerContext>(0);
}


size_t PhoneNumberParser::LocalPhoneContext::getRuleIndex() const {
  return PhoneNumberParser::RuleLocalPhone;
}

void PhoneNumberParser::LocalPhoneContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocalPhone(this);
}

void PhoneNumberParser::LocalPhoneContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocalPhone(this);
}


std::any PhoneNumberParser::LocalPhoneContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PhoneNumberVisitor*>(visitor))
    return parserVisitor->visitLocalPhone(this);
  else
    return visitor->visitChildren(this);
}

PhoneNumberParser::LocalPhoneContext* PhoneNumberParser::localPhone() {
  LocalPhoneContext *_localctx = _tracker.createInstance<LocalPhoneContext>(_ctx, getState());
  enterRule(_localctx, 8, PhoneNumberParser::RuleLocalPhone);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    localArea();
    setState(51);
    phoneSep();
    setState(52);
    localizer();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LocalAreaContext ------------------------------------------------------------------

PhoneNumberParser::LocalAreaContext::LocalAreaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PhoneNumberParser::LocalAreaContext::DIGITS() {
  return getToken(PhoneNumberParser::DIGITS, 0);
}


size_t PhoneNumberParser::LocalAreaContext::getRuleIndex() const {
  return PhoneNumberParser::RuleLocalArea;
}

void PhoneNumberParser::LocalAreaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocalArea(this);
}

void PhoneNumberParser::LocalAreaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocalArea(this);
}


std::any PhoneNumberParser::LocalAreaContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PhoneNumberVisitor*>(visitor))
    return parserVisitor->visitLocalArea(this);
  else
    return visitor->visitChildren(this);
}

PhoneNumberParser::LocalAreaContext* PhoneNumberParser::localArea() {
  LocalAreaContext *_localctx = _tracker.createInstance<LocalAreaContext>(_ctx, getState());
  enterRule(_localctx, 10, PhoneNumberParser::RuleLocalArea);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(PhoneNumberParser::DIGITS);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LocalizerContext ------------------------------------------------------------------

PhoneNumberParser::LocalizerContext::LocalizerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PhoneNumberParser::LocalizerContext::DIGITS() {
  return getToken(PhoneNumberParser::DIGITS, 0);
}


size_t PhoneNumberParser::LocalizerContext::getRuleIndex() const {
  return PhoneNumberParser::RuleLocalizer;
}

void PhoneNumberParser::LocalizerContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocalizer(this);
}

void PhoneNumberParser::LocalizerContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocalizer(this);
}


std::any PhoneNumberParser::LocalizerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PhoneNumberVisitor*>(visitor))
    return parserVisitor->visitLocalizer(this);
  else
    return visitor->visitChildren(this);
}

PhoneNumberParser::LocalizerContext* PhoneNumberParser::localizer() {
  LocalizerContext *_localctx = _tracker.createInstance<LocalizerContext>(_ctx, getState());
  enterRule(_localctx, 12, PhoneNumberParser::RuleLocalizer);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(PhoneNumberParser::DIGITS);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DtmfContext ------------------------------------------------------------------

PhoneNumberParser::DtmfContext::DtmfContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PhoneNumberParser::DtmfWithLocalContext* PhoneNumberParser::DtmfContext::dtmfWithLocal() {
  return getRuleContext<PhoneNumberParser::DtmfWithLocalContext>(0);
}

PhoneNumberParser::DtmfAllContext* PhoneNumberParser::DtmfContext::dtmfAll() {
  return getRuleContext<PhoneNumberParser::DtmfAllContext>(0);
}


size_t PhoneNumberParser::DtmfContext::getRuleIndex() const {
  return PhoneNumberParser::RuleDtmf;
}

void PhoneNumberParser::DtmfContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDtmf(this);
}

void PhoneNumberParser::DtmfContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDtmf(this);
}


std::any PhoneNumberParser::DtmfContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PhoneNumberVisitor*>(visitor))
    return parserVisitor->visitDtmf(this);
  else
    return visitor->visitChildren(this);
}

PhoneNumberParser::DtmfContext* PhoneNumberParser::dtmf() {
  DtmfContext *_localctx = _tracker.createInstance<DtmfContext>(_ctx, getState());
  enterRule(_localctx, 14, PhoneNumberParser::RuleDtmf);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(60);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(58);
      dtmfWithLocal();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(59);
      dtmfAll();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DtmfWithLocalContext ------------------------------------------------------------------

PhoneNumberParser::DtmfWithLocalContext::DtmfWithLocalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PhoneNumberParser::LocalAreaWithDtmfContext* PhoneNumberParser::DtmfWithLocalContext::localAreaWithDtmf() {
  return getRuleContext<PhoneNumberParser::LocalAreaWithDtmfContext>(0);
}

PhoneNumberParser::DtmfLocalizerContext* PhoneNumberParser::DtmfWithLocalContext::dtmfLocalizer() {
  return getRuleContext<PhoneNumberParser::DtmfLocalizerContext>(0);
}

PhoneNumberParser::PhoneSepContext* PhoneNumberParser::DtmfWithLocalContext::phoneSep() {
  return getRuleContext<PhoneNumberParser::PhoneSepContext>(0);
}


size_t PhoneNumberParser::DtmfWithLocalContext::getRuleIndex() const {
  return PhoneNumberParser::RuleDtmfWithLocal;
}

void PhoneNumberParser::DtmfWithLocalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDtmfWithLocal(this);
}

void PhoneNumberParser::DtmfWithLocalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDtmfWithLocal(this);
}


std::any PhoneNumberParser::DtmfWithLocalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PhoneNumberVisitor*>(visitor))
    return parserVisitor->visitDtmfWithLocal(this);
  else
    return visitor->visitChildren(this);
}

PhoneNumberParser::DtmfWithLocalContext* PhoneNumberParser::dtmfWithLocal() {
  DtmfWithLocalContext *_localctx = _tracker.createInstance<DtmfWithLocalContext>(_ctx, getState());
  enterRule(_localctx, 16, PhoneNumberParser::RuleDtmfWithLocal);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    localAreaWithDtmf();
    setState(64);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2166784) != 0)) {
      setState(63);
      phoneSep();
    }
    setState(66);
    dtmfLocalizer();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LocalAreaWithDtmfContext ------------------------------------------------------------------

PhoneNumberParser::LocalAreaWithDtmfContext::LocalAreaWithDtmfContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> PhoneNumberParser::LocalAreaWithDtmfContext::DIGITS() {
  return getTokens(PhoneNumberParser::DIGITS);
}

tree::TerminalNode* PhoneNumberParser::LocalAreaWithDtmfContext::DIGITS(size_t i) {
  return getToken(PhoneNumberParser::DIGITS, i);
}

std::vector<tree::TerminalNode *> PhoneNumberParser::LocalAreaWithDtmfContext::BASIC_STRING() {
  return getTokens(PhoneNumberParser::BASIC_STRING);
}

tree::TerminalNode* PhoneNumberParser::LocalAreaWithDtmfContext::BASIC_STRING(size_t i) {
  return getToken(PhoneNumberParser::BASIC_STRING, i);
}


size_t PhoneNumberParser::LocalAreaWithDtmfContext::getRuleIndex() const {
  return PhoneNumberParser::RuleLocalAreaWithDtmf;
}

void PhoneNumberParser::LocalAreaWithDtmfContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocalAreaWithDtmf(this);
}

void PhoneNumberParser::LocalAreaWithDtmfContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocalAreaWithDtmf(this);
}


std::any PhoneNumberParser::LocalAreaWithDtmfContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PhoneNumberVisitor*>(visitor))
    return parserVisitor->visitLocalAreaWithDtmf(this);
  else
    return visitor->visitChildren(this);
}

PhoneNumberParser::LocalAreaWithDtmfContext* PhoneNumberParser::localAreaWithDtmf() {
  LocalAreaWithDtmfContext *_localctx = _tracker.createInstance<LocalAreaWithDtmfContext>(_ctx, getState());
  enterRule(_localctx, 18, PhoneNumberParser::RuleLocalAreaWithDtmf);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(69); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(68);
              _la = _input->LA(1);
              if (!(_la == PhoneNumberParser::BASIC_STRING

              || _la == PhoneNumberParser::DIGITS)) {
              _errHandler->recoverInline(this);
              }
              else {
                _errHandler->reportMatch(this);
                consume();
              }
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(71); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DtmfAllContext ------------------------------------------------------------------

PhoneNumberParser::DtmfAllContext::DtmfAllContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PhoneNumberParser::DtmfAllContext::BASIC_STRING() {
  return getToken(PhoneNumberParser::BASIC_STRING, 0);
}


size_t PhoneNumberParser::DtmfAllContext::getRuleIndex() const {
  return PhoneNumberParser::RuleDtmfAll;
}

void PhoneNumberParser::DtmfAllContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDtmfAll(this);
}

void PhoneNumberParser::DtmfAllContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<PhoneNumberListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDtmfAll(this);
}


std::any PhoneNumberParser::DtmfAllContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PhoneNumberVisitor*>(visitor))
    return parserVisitor->visitDtmfAll(this);
  else
    return visitor->visitChildren(this);
}

PhoneNumberParser::DtmfAllContext* PhoneNumberParser::dtmfAll() {
  DtmfAllContext *_localctx = _tracker.createInstance<DtmfAllContext>(_ctx, getState());
  enterRule(_localctx, 20, PhoneNumberParser::RuleDtmfAll);
